Automatically backed up by Learn

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -19,5 +19,6 @@ Admin:
 <% end %><br>
 
 <!-- link_to "Log Out", logout_path, method: "delete" -->
+<%= link_to "Log Out", controller: 'sessions', action: 'destroy' %>
 <%= link_to "See attractions", attractions_path %><br>
 <!-- might need a link_to "See Attractions, attractions_path -->
