--- a/app/views/attractions/index.html.erb
+++ b/app/views/attractions/index.html.erb
@@ -1,4 +1,9 @@
 <h1>Attractions Index</h1>
 <% @attractions.each do |attraction| %>
-  <%= attraction.name %>
+  <p>Name: <%= attraction.name %> Tickets: <%= attraction.tickets %></p>
+  <% if current_user.admin %>
+    <%= link_to "Show #{attraction.name}", attraction_path(attraction) %>
+  <% else %>
+    <%= link_to "Go on #{attraction.name}", attraction_path(attraction) %>
+  <% end %>
 <% end %>
