--- a/app/views/attractions/show.html.erb
+++ b/app/views/attractions/show.html.erb
@@ -1,11 +1,11 @@
 <h1>Show Attraction</h1>
 
 <% if current_user.admin %>
-        <p><%= link_to "Edit Attraction", edit_attraction_path(@attraction) %></p>
+ <%= link_to "Edit Attraction", edit_attraction_path(@attraction) %>
 <% else %>
-    <%= form_for(@ride) do |f| %>
-        <%= f.hidden_field :user_id %>
-        <%= f.hidden_field :attraction_id %>
-        <%= f.submit "Go on this ride" %>
-    <% end %>
+  <%= form_for(@ride) do |f| %>
+    <%= f.hidden_field :user_id %>
+    <%= f.hidden_field :attraction_id %>
+    <%= f.submit "Go on this ride" %>
+  <% end %>
 <% end %>
